Massive improvements in performance, add compatibility mode for optifine on forge.