@@ -1,5 +1,6 @@
 package mod.chiselsandbits.aabb;
 
+import mod.chiselsandbits.api.axissize.CollisionType;
 import mod.chiselsandbits.api.multistate.accessor.IAreaAccessor;
 import mod.chiselsandbits.api.multistate.accessor.IStateEntryInfo;
 import net.minecraft.core.Direction;
@@ -13,13 +14,11 @@ import org.mockito.stubbing.Answer;
 import java.util.Collection;
 import java.util.Comparator;
 import java.util.List;
-import java.util.function.Predicate;
-import java.util.stream.Collectors;
+import java.util.function.Consumer;
 import java.util.stream.Stream;
 
 import static org.mockito.Matchers.any;
-import static org.mockito.Mockito.mock;
-import static org.mockito.Mockito.when;
+import static org.mockito.Mockito.*;
 
 public class AABBCompressorTest
 {
@@ -55,8 +54,8 @@ public class AABBCompressorTest
     }
     
     private void RunDirectNeighboringTest(final Direction direction) {
-        final AABB initialBox = AABB.ofSize(Vec3.ZERO, 1d, 1d, 1d);
-        final AABB neighborBox = initialBox.move(direction.getStepX(), direction.getStepY(), direction.getStepZ());
+        final AABB initialBox = AABB.ofSize(Vec3.ZERO, 1/16d, 1/16d, 1/16d);
+        final AABB neighborBox = initialBox.move(direction.getStepX() /16d, direction.getStepY() /16d, direction.getStepZ() /16d);
 
         final AABB expectedBox = initialBox.minmax(neighborBox);
 
@@ -67,38 +66,42 @@ public class AABBCompressorTest
         );
     }
 
+    @SuppressWarnings("unchecked")
     private void RunCompressionTest(
       final Collection<AABB> sources,
       final Collection<AABB> expectedResults,
       final String testName
     ) {
         final List<IStateEntryInfo> entrySources = sources
-                                                     .stream()
-                                                     .map(box -> {
-                                                         final Vec3 startPoint = new Vec3(box.minX, box.minY, box.minZ);
-                                                         final Vec3 endPoint = new Vec3(box.maxX, box.maxY, box.maxZ);
+          .stream()
+          .map(box -> {
+              final Vec3 startPoint = new Vec3(box.minX, box.minY, box.minZ);
+              final Vec3 endPoint = new Vec3(box.maxX, box.maxY, box.maxZ);
 
-                                                         final IStateEntryInfo mock = mock(IStateEntryInfo.class);
+              final IStateEntryInfo mock = mock(IStateEntryInfo.class);
 
-                                                         when(mock.getBoundingBox()).thenReturn(box);
-                                                         when(mock.getStartPoint()).thenReturn(startPoint);
-                                                         when(mock.getEndPoint()).thenReturn(endPoint);
-                                                         when(mock.getCenterPoint()).thenReturn(startPoint.add(endPoint).multiply(0.5,0.5,0.5));
+              when(mock.getBoundingBox()).thenReturn(box);
+              when(mock.getStartPoint()).thenReturn(startPoint);
+              when(mock.getEndPoint()).thenReturn(endPoint);
+              when(mock.getCenterPoint()).thenReturn(startPoint.add(endPoint).multiply(0.5, 0.5, 0.5));
 
-                                                         return mock;
-                                                     })
-                                                     .sorted(Comparator.<IStateEntryInfo, Double>comparing(stateEntryInfo -> stateEntryInfo.getStartPoint().x())
-                                                               .thenComparing(stateEntryInfo -> stateEntryInfo.getStartPoint().y())
-                                                               .thenComparing(stateEntryInfo -> stateEntryInfo.getStartPoint().z()))
-                                                     .collect(Collectors.toList());
+              return mock;
+          })
+          .sorted(Comparator.<IStateEntryInfo, Double>comparing(stateEntryInfo -> stateEntryInfo.getStartPoint().x())
+            .thenComparing(stateEntryInfo -> stateEntryInfo.getStartPoint().y())
+            .thenComparing(stateEntryInfo -> stateEntryInfo.getStartPoint().z())).toList();
 
         final IAreaAccessor mock = mock(IAreaAccessor.class);
 
         when(mock.streamWithPositionMutator(any())).then((Answer<Stream<IStateEntryInfo>>) invocation -> entrySources.stream());
+        doAnswer((Answer<Void>) invocation -> {
+            final Consumer<IStateEntryInfo> callback = invocation.getArgumentAt(1, Consumer.class);
+            entrySources.forEach(callback);
+            return null;
+        }).when(mock).forEachWithPositionMutator(any(), any());
 
         RunCompressionTest(
           mock,
-          s -> true,
           expectedResults,
           testName
         );
@@ -106,14 +109,15 @@ public class AABBCompressorTest
 
     private void RunCompressionTest(
       final IAreaAccessor areaAccessor,
-      final Predicate<IStateEntryInfo> selectionPredicate,
       final Collection<AABB> expectedResults,
       final String testName
     ) {
         final Collection<AABB> calculatedResults = AABBCompressor.compressStates(
-          areaAccessor, selectionPredicate
+          areaAccessor, CollisionType.ALL
         );
 
         Assert.assertEquals(String.format("The calculated results for: %s do not match.", testName), expectedResults, calculatedResults);
     }
+
+
 }
